--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
             </div>
           </nav>
     </header>
+    <main>
+
+        <section class="hero align-items-stretch">
+            <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
+                <img src="./public/img/me.jpg" class="mepic" width="250px" alt="">
+                <h1>Hola, soy Diana Gaviria</h1>
+                <h2>Profesional en seguridad y salud en el trabajo</h2>
+            </div>
+        </section>
+
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
