--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <h1>Hola, soy Diana Gaviria</h1>
                 <h2>Profesional en seguridad y salud en el trabajo</h2>
             </div>
+            <div class="hero-inferior">
+                <img class="hero-inferior-img" src="https://www.unisimon.edu.co/showimagen/showimage/noticias/20240415163256_0.jpg" alt="">
+            </div>
         </section>
 
     </main>
